Added new carousel and removed react-multi-carousel

--- a/uhe-website/src/pages/Home.css
+++ b/uhe-website/src/pages/Home.css
@@ -19,3 +19,14 @@
     height:100%;
     /*height:1000px;*/
 }
+
+.image-item {
+    margin: 20px 0 20px 20px;
+}
+
+.slick-prev:before {
+    color: black !important;
+}
+.slick-next:before {
+    color: black !important;
+}
