Added animations to both logos and images

--- a/uhe-website/src/pages/Home.css
+++ b/uhe-website/src/pages/Home.css
@@ -4,3 +4,30 @@
 .slick-next:before {
     color: black !important;
 }
+
+@keyframes slideIn {
+    0% {
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+.logoFirst {
+    animation: slideIn 1.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.logoSecond {
+    animation: slideIn 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.logoThird {
+    animation: slideIn 1.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.logoFourth {
+    animation: slideIn 1.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
