--- a/uhe-website/src/components/Games.css
+++ b/uhe-website/src/components/Games.css
@@ -1,23 +1,35 @@
 /*.gamesText {*/
 /*    opacity: 0;*/
 /*}*/
+/*.parent {*/
+/*    width: 100px;*/
+/*    height: 400px;*/
+/*    overflow: hidden;*/
+/*    border-radius:10px;*/
+/*    position: relative;*/
+/*    background-size: cover;*/
+/*    background-position: center;*/
+/*    background-image: url("../images/worlds_edge_v2_1.png");*/
+/*    color:rgba(255,255,255,0);*/
+/*    transition: background-image .5s, color .5s;*/
+/*}*/
 
-.parent {
-    width: 100px;
-    height: 400px;
-    overflow: hidden;
-    border-radius:10px;
-    position: relative;
-    background-size: cover;
-    background-image: url("../images/worlds-edge-1.png");
-    color:rgba(255,255,255,0);
-    transition: background-image .5s, color .5s;
-    /*background-color:#61dafb;*/
+/*TODO make classes for each individual component*/
+.parentLeague:hover,
+.parentLeague:focus {
+    background-image: url("../images/summoners_rift_2.png");
+    color:rgba(255,255,255,1);
+}
+
+.parentValorant:hover,
+.parentValorant:focus {
+    background-image: url("../images/haven_2.png");
+    color:rgba(255,255,255,1);
 }
 
 .parent:hover,
 .parent:focus {
-    background-image: url("../images/worlds-edge-2.png");
+    background-image: url("../images/worlds_edge_v2_2.png");
     color:rgba(255,255,255,1);
 }
 
