--- a/src/components/Games.css
+++ b/src/components/Games.css
@@ -15,26 +15,32 @@
 /*}*/
 
 /*TODO make classes for each individual component*/
-.parentLeague:hover,
-.parentLeague:focus {
+.leagueBackgroundTransition:hover,
+.leagueBackgroundTransition:focus {
     background-image: url("../images/summoners_rift_2.png");
     color:rgba(255,255,255,1);
 }
 
-.parentValorant:hover,
-.parentValorant:focus {
+.valorantBackgroundTransition:hover,
+.valorantBackgroundTransition:focus {
     background-image: url("../images/haven_2.png");
     color:rgba(255,255,255,1);
 }
 
-.parent:hover,
-.parent:focus {
+.apexBackgroundTransition:hover,
+.apexBackgroundTransition:focus {
     background-image: url("../images/worlds_edge_v2_2.png");
     color:rgba(255,255,255,1);
 }
 
-.parent:hover .child,
-.parent:focus .child {
+.overwatchBackgroundTransition:hover,
+.overwatchBackgroundTransition:focus {
+    background-image: url("../images/eichenwald_overwatch_2.png");
+    color:rgba(255,255,255,1);
+}
+
+.characterImageScale:hover .child,
+.characterImageScale:focus .child {
     transform: scale(1.1);
     /*transition: background-image .7s;*/
     /*background-size: cover;*/
