--- a/src/layouts/App.css
+++ b/src/layouts/App.css
@@ -63,6 +63,11 @@
   animation: slideIn 1.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
+.slideIn1400ms {
+  visibility: visible;
+  animation: slideIn 1.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
 .slideIn1500ms {
   visibility: visible;
   animation: slideIn 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
