half finished Location section
Needs to be looked over again but sort of finished the location section. Decided to use 2 images instead of the initial 3 since I couldn't get 3 images to look good. Also deleted a lot of excess code and switched the "AvailableEquipmentTitle" to "SectionTitle" I imported along with others

--- a/src/pages/Ilab.css
+++ b/src/pages/Ilab.css
@@ -9,9 +9,11 @@
 }
 
 .LocationImageStyle {
-    height: 25%;
-    width: 75%;
+    height: 30%;
+    width: 50%;
+    display: block;
     object-fit: cover;
+    margin: 0 auto;
 }
 
 /*making scroll bar nice*/
