--- a/src/pages/Ilab.css
+++ b/src/pages/Ilab.css
@@ -1,27 +1,17 @@
-.horizontal-scrollable {
-    overflow-x: auto;
-    white-space: nowrap;
-    width: 80%;
-    padding-left: 100px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+.staff{
+    position: center;
+    width: 60%;
     display: flex;
+    justify-content: center;
 }
-
-
-/*making scroll bar nice*/
-::-webkit-scrollbar:horizontal{
-    width: 12px;
-    height: 10px;
-}
-
-::-webkit-scrollbar-track{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb{
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5)
-}
-/* Decorations */
+.new {
+    background-color: palevioletred;
+    border: 1;
+    border-style: solid;
+    border-color: black;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Adjusted this line */
+  }
+  
