--- a/src/layouts/App.css
+++ b/src/layouts/App.css
@@ -49,8 +49,40 @@
   }
 }
 
+@keyframes slideOut {
+  0% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+}
+
 .hidden {
   visibility: hidden;
+}
+
+/*.scrollToTopBtn {*/
+/*  transform: translateY(100px);*/
+/*  opacity: 0;*/
+/*  transition: all 1s ease;*/
+/*}*/
+
+/*.slideOut1000ms {*/
+/*  visibility: visible;*/
+/*  animation: slideOut 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;*/
+/*}*/
+
+.slideOut1000ms {
+  visibility: visible;
+  animation: slideOut 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.slideIn500ms {
+  visibility: visible;
+  animation: slideIn 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 .slideIn1000ms {
