--- a/src/layouts/App.css
+++ b/src/layouts/App.css
@@ -38,9 +38,10 @@
 }
 
 /* Slidein animation for components on webpage */
+/* unsure if changing the px 100 --> 200px specifically for the scroll up button will do anything weird*/
 @keyframes slideIn {
   0% {
-    transform: translateY(100px);
+    transform: translateY(200px);
     opacity: 0;
   }
   100% {
@@ -55,7 +56,7 @@
     opacity: 1;
   }
   100% {
-    transform: translateY(100px);
+    transform: translateY(200px);
     opacity: 0;
   }
 }
