finished new updates but still need to clean up a lot of code

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -11,3 +11,10 @@
     width: auto;
     height: auto;
 }
+.test {
+    margin: 20px 0 20px 20px;
+    display: block;
+    max-height: 350px;
+    width: auto;
+    height: auto;
+}
