--- a/src/components/Games.css
+++ b/src/components/Games.css
@@ -46,6 +46,12 @@
     color:rgba(255,255,255,1);
 }
 
+.csgoBackgroundTransition:hover,
+.csgoBackgroundTransition:focus {
+    background-image: url("/src/assets/images/dust2_2.png");
+    color:rgba(255,255,255,1);
+}
+
 .characterImageScale:hover .child,
 .characterImageScale:focus .child {
     transform: scale(1.1);
