--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -12,7 +12,8 @@
     height: auto;
 }
 .test {
-    margin: 20px 0 20px 20px;
+    /*margin: 20px 0 20px 20px;*/
+    /*margin: 20px 0 0px 0px;*/
     display: block;
     /*max-width: 400px;*/
     max-height: 350px;
