--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -14,7 +14,7 @@
 .test {
     /*margin: 20px 0 20px 20px;*/
     /*margin: 20px 0 0px 0px;*/
-    display: block;
+    /*display: block;*/
     /*max-width: 400px;*/
     max-height: 350px;
     width: auto;
@@ -23,11 +23,44 @@
 
 .whoAreWeImages {
     /*margin: 20px 0 20px 20px;*/
-    display: block;
-    max-width: 500px;
-    max-height: 350px;
-    width: auto;
-    height: auto;
+    /*display: block;*/
+    /*max-width: 500px;*/
+    /*max-height: 350px;*/
+    /*width: auto;*/
+    /*height: auto;*/
     object-fit: contain;
-    object-position: center;
+    max-height: 350px;
+    /*object-position: center;*/
+}
+
+@media (max-width: 1500px) {
+    .whoAreWeImages {
+        object-fit: contain;
+        max-height: 300px;
+        /*max-width: 90%;  !* Adjust max-width on larger screens *!*/
+    }
+}
+
+@media (max-width: 1370px) {
+    .whoAreWeImages {
+        object-fit: contain;
+        max-height: 280px;
+        /*max-width: 90%;  !* Adjust max-width on larger screens *!*/
+    }
+}
+
+@media (max-width: 900px) {
+    .whoAreWeImages {
+        object-fit: contain;
+        /*max-width: 100%;  !* Ensure image takes up full width on smaller screens *!*/
+        max-height: 250px; /* Optional: you can limit height on small screens */
+    }
+}
+
+@media (max-width: 480px) {
+    .whoAreWeImages {
+        object-fit: contain;
+        /*max-width: 100%;*/
+        max-height: 175px;  /* Further limit height on very small screens */
+    }
 }
