--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,6 +4,7 @@
 .slick-next:before {
     color: black !important;
 }
+
 .logos {
     display: block;
     max-width: 175px;
@@ -11,6 +12,7 @@
     width: auto;
     height: auto;
 }
+
 .test {
     /*margin: 20px 0 20px 20px;*/
     /*margin: 20px 0 0px 0px;*/
@@ -57,10 +59,27 @@
     }
 }
 
-@media (max-width: 480px) {
-    .whoAreWeImages {
-        object-fit: contain;
-        /*max-width: 100%;*/
-        max-height: 175px;  /* Further limit height on very small screens */
-    }
-}
+/*@media (max-width: 480px) {*/
+/*    .whoAreWeImages {*/
+/*        object-fit: contain;*/
+/*        !*max-width: 100%;*!*/
+/*        max-height: 175px;  !* Further limit height on very small screens *!*/
+/*    }*/
+/*    .WORK {*/
+/*        !*height:450px;*!*/
+/*    }*/
+/*}*/
+/*.slick-slider {*/
+/*    min-height:350px !important;*/
+/*}*/
+
+/*.WORK {*/
+/*    min-height:308px !important;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
+
+/*.slick-slide {*/
+/*    min-height: 350px !important;  !* Force each slide to be 350px *!*/
+/*    height: 350px !important;      !* Set explicit height *!*/
+/*}*/
